--- a/Client/Dt.Sample/FormView/FvLayout.xaml
+++ b/Client/Dt.Sample/FormView/FvLayout.xaml
@@ -15,27 +15,33 @@
     <a:WinItem DockState="DockedRight">
         <a:Tabs>
             <a:Tab Title="属性">
-                <a:Fv x:Name="_ob">
-                    <a:CText Title="列标题" ID="Title" />
-                    <a:CBool Title="显示红星" ID="ShowStar" />
-                    <a:CBool Title="列名垂直显示" ID="IsVerticalTitle" />
-                    <a:CBool Title="显示标题列" ID="ShowTitle" />
-                    <a:CNum Title="列名宽度" ID="TitleWidth" />
-                    <a:CBool Title="水平填充" ID="IsHorStretch" />
-                    <a:CNum Title="行数(-1自动)" ID="RowSpan" />
-                    <a:CList Title="可见" ID="Visibility" />
-                    <a:CBar Title="单元格增删" />
-                    <StackPanel Orientation="Horizontal">
-                        <Button Content="添加一个" Click="OnAddClick" />
-                        <Button Content="添加五个" Click="OnAddFive" />
-                        <Button Content="添加二十个" Click="OnAddBatch" />
-                    </StackPanel>
-                    <StackPanel Orientation="Horizontal">
-                        <Button Content="删除末尾" Click="OnDelClick" />
-                        <Button Content="清空所有" Click="OnClearClick" />
-                        <Button Content="清空再批量添加" Click="OnReset" />
-                    </StackPanel>
-                </a:Fv>
+                <StackPanel>
+                    <a:Fv x:Name="_ob">
+                        <a:CText Title="列标题" ID="Title" />
+                        <a:CBool Title="显示红星" ID="ShowStar" />
+                        <a:CBool Title="列名垂直显示" ID="IsVerticalTitle" />
+                        <a:CBool Title="显示标题列" ID="ShowTitle" />
+                        <a:CNum Title="列名宽度" ID="TitleWidth" />
+                        <a:CBool Title="水平填充" ID="IsHorStretch" />
+                        <a:CNum Title="行数(-1自动)" ID="RowSpan" />
+                        <a:CList Title="可见" ID="Visibility" />
+                        <a:CBar Title="单元格增删" />
+                        <StackPanel Orientation="Horizontal">
+                            <Button Content="添加一个" Click="OnAddClick" />
+                            <Button Content="添加五个" Click="OnAddFive" />
+                            <Button Content="添加二十个" Click="OnAddBatch" />
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal">
+                            <Button Content="删除末尾" Click="OnDelClick" />
+                            <Button Content="清空所有" Click="OnClearClick" />
+                            <Button Content="清空再批量添加" Click="OnReset" />
+                        </StackPanel>
+                    </a:Fv>
+                    <a:Fv x:Name="_bv" Data="{Binding ElementName=_fv}">
+                        <a:CNum Title="最大列数" ID="MaxColCount" IsInteger="True" />
+                    </a:Fv>
+                </StackPanel>
+                
             </a:Tab>
         </a:Tabs>
     </a:WinItem>
