--- a/Client/Dt.App/Publish/Edit/EditPostDlg.xaml
+++ b/Client/Dt.App/Publish/Edit/EditPostDlg.xaml
@@ -1,5 +1,5 @@
 ﻿<a:Dlg
-    x:Class="Dt.Fz.EditPostDlg"
+    x:Class="Dt.App.Publish.EditPostDlg"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
