--- a/Client/Dt.App/Publish/PostList.xaml
+++ b/Client/Dt.App/Publish/PostList.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="Dt.Fz.PostList"
+    x:Class="Dt.App.Publish.PostList"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base">
