--- a/Client/Dt.App/Publish/Edit/EditPostDlg.xaml
+++ b/Client/Dt.App/Publish/Edit/EditPostDlg.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
+    IsPinned="True"
     Title="编辑文章内容">
 
     <a:Dlg.Menu>
