--- a/Client/Dt.App/Publish/Edit/PostMgr.xaml
+++ b/Client/Dt.App/Publish/Edit/PostMgr.xaml
@@ -3,7 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
-    Home="文章列表,文章编辑">
+    Home="文章列表,文章编辑,关键字,所属专辑">
 
     <a:WinItem DockState="DockedLeft">
         <a:Tabs>
@@ -75,65 +75,6 @@
                     <a:CBool ID="AddKeywordLink" Title="添加同关键字链接" />
                     <a:CBool ID="IsPublish" Title="发布" />
                     
-                    <a:CBar RowSpan="-1" Background="White" IsHorStretch="False">
-                        <Grid>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="Auto" />
-                                <RowDefinition Height="*" />
-                            </Grid.RowDefinitions>
-                            <Grid Padding="10,0,0,0"
-                                  Background="{StaticResource 浅灰背景}"
-                                  BorderBrush="{StaticResource 浅灰边框}"
-                                  BorderThickness="0,0,0,1">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="Auto" />
-                                    <ColumnDefinition Width="*" />
-                                    <ColumnDefinition Width="Auto" />
-                                </Grid.ColumnDefinitions>
-                                <TextBlock Text="&#xE045;" FontFamily="{StaticResource IconFont}" VerticalAlignment="Center" Margin="0,0,4,0" />
-                                <TextBlock Text="关键字" VerticalAlignment="Center" Grid.Column="1" />
-                                <Button Content="&#xE080;" Click="OnAddKeyword" Style="{StaticResource 字符按钮}" HorizontalAlignment="Right" Grid.Column="2" />
-                            </Grid>
-                            <a:Lv x:Name="_lvKeyword" ViewMode="Tile" SelectionMode="None" Grid.Row="1">
-                                <a:Ex.Menu>
-                                    <a:Menu>
-                                        <a:Mi ID="删除" Icon="删除" Click="OnDelPostKeyword" />
-                                    </a:Menu>
-                                </a:Ex.Menu>
-                                <DataTemplate>
-                                    <a:Dot ID="keyword" Margin="10,0,10,0" />
-                                </DataTemplate>
-                            </a:Lv>
-                        </Grid>
-                    </a:CBar>
-                    <a:CBar RowSpan="-1" Background="White" IsHorStretch="False">
-                        <StackPanel>
-                            <Grid Padding="10,0,0,0"
-                                  Background="{StaticResource 浅灰背景}"
-                                  BorderBrush="{StaticResource 浅灰边框}"
-                                  BorderThickness="0,0,0,1">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="Auto" />
-                                    <ColumnDefinition Width="*" />
-                                    <ColumnDefinition Width="Auto" />
-                                </Grid.ColumnDefinitions>
-                                <TextBlock Text="&#xE045;" FontFamily="{StaticResource IconFont}" VerticalAlignment="Center" Margin="0,0,4,0" />
-                                <TextBlock Text="所属专辑" VerticalAlignment="Center" Grid.Column="1" />
-                                <Button Content="&#xE080;" Click="OnAddAlbum" Style="{StaticResource 字符按钮}" HorizontalAlignment="Right" Grid.Column="2" />
-                            </Grid>
-                            <a:Lv x:Name="_lvAlbum" ViewMode="Tile" SelectionMode="None">
-                                <a:Ex.Menu>
-                                    <a:Menu>
-                                        <a:Mi ID="删除" Icon="删除" Click="OnDelPostAlbum" />
-                                    </a:Menu>
-                                </a:Ex.Menu>
-                                <DataTemplate>
-                                    <a:Dot ID="name" Margin="10,0,10,0" />
-                                </DataTemplate>
-                            </a:Lv>
-                        </StackPanel>
-                    </a:CBar>
-                    
                     <a:CBar Title="其他" />
                     <a:CTip ID="Url" Title="文章地址" />
                     <a:CTip ID="creator" Title="创建人" />
@@ -146,4 +87,42 @@
             </a:Tab>
         </a:Tabs>
     </a:WinCenter>
+    <a:WinItem DockState="DockedRight">
+        <a:Tabs>
+            <a:Tab Title="关键字">
+                <a:Tab.Menu>
+                    <a:Menu>
+                        <a:Mi ID="增加" Icon="加号" ShowInPhone="Icon" Click="OnAddKeyword" />
+                    </a:Menu>
+                </a:Tab.Menu>
+                <a:Lv x:Name="_lvKeyword">
+                    <a:Ex.Menu>
+                        <a:Menu>
+                            <a:Mi ID="删除" Icon="删除" Click="OnDelPostKeyword" />
+                        </a:Menu>
+                    </a:Ex.Menu>
+                    <DataTemplate>
+                        <a:Dot ID="keyword" Margin="10,0,10,0" />
+                    </DataTemplate>
+                </a:Lv>
+            </a:Tab>
+            <a:Tab Title="所属专辑">
+                <a:Tab.Menu>
+                    <a:Menu>
+                        <a:Mi ID="增加" Icon="加号" ShowInPhone="Icon" Click="OnAddAlbum" />
+                    </a:Menu>
+                </a:Tab.Menu>
+                <a:Lv x:Name="_lvAlbum">
+                    <a:Ex.Menu>
+                        <a:Menu>
+                            <a:Mi ID="删除" Icon="删除" Click="OnDelPostAlbum" />
+                        </a:Menu>
+                    </a:Ex.Menu>
+                    <DataTemplate>
+                        <a:Dot ID="name" Margin="10,0,10,0" />
+                    </DataTemplate>
+                </a:Lv>
+            </a:Tab>
+        </a:Tabs>
+    </a:WinItem>
 </a:Win>
