--- a/Client/Dt.App/Model/Role/SysRole.xaml
+++ b/Client/Dt.App/Model/Role/SysRole.xaml
@@ -48,12 +48,20 @@
         <a:Tabs>
             <a:Tab Title="关联用户">
                 <a:Tab.Menu>
-                    <a:Menu>
+                    <a:Menu x:Name="_uMenu">
                         <a:Mi ID="添加" Icon="加号" Click="OnAddUser" IsEnabled="{Binding HasSelected,ElementName=_lvRole}" />
-                        <a:Mi ID="移除" Icon="垃圾箱" Click="OnRemoveUser" IsEnabled="{Binding HasSelected,ElementName=_lvUser}" />
+                        <a:Mi ID="移除" Icon="垃圾箱" Click="OnRemoveUser" IsEnabled="{Binding HasSelected,ElementName=_lvUser}" Visibility="Collapsed" />
+                        <a:Mi ID="全选" Icon="正确" Click="OnSelectAll" Visibility="Collapsed" />
+                        <a:Mi ID="选择" Icon="详细" Click="OnMultiMode" />
+                        <a:Mi ID="取消" Icon="详细" Click="OnCancelMulti" Visibility="Collapsed" />
                     </a:Menu>
                 </a:Tab.Menu>
                 <a:Lv x:Name="_lvUser">
+                    <a:Ex.Menu>
+                        <a:Menu>
+                            <a:Mi ID="移除" Icon="垃圾箱" Click="OnRemoveUser2" />
+                        </a:Menu>
+                    </a:Ex.Menu>
                     <DataTemplate>
                         <a:Dot ID="username" Margin="10,0,10,0" />
                     </DataTemplate>
