--- a/Client/Dt.App/Workflow/Design/Parts/WfStartAtvForm.xaml
+++ b/Client/Dt.App/Workflow/Design/Parts/WfStartAtvForm.xaml
@@ -17,7 +17,7 @@
                 <wf:AtvRole x:Name="_atvRole" />
             </a:CBar>
             <a:CBar Title="其它"/>
-            <a:CList ID="transkind" Title="后续迁移方式" Enum="Dt.App.Workflow.AtvTransKind,Dt.App" />
+            <a:CList ID="transkind" Title="后续迁移方式" Enum="Dt.App.Workflow.WfdAtvTransKind,Dt.App" />
             <a:CTip ID="ctime" Title="创建时间" />
             <a:CTip ID="mtime" Title="修改时间" />
         </a:Fv>
