--- a/Client/Dt.App/Workflow/RunTime/StartWorkflow.xaml
+++ b/Client/Dt.App/Workflow/RunTime/StartWorkflow.xaml
@@ -5,7 +5,13 @@
     xmlns:a="using:Dt.Base"
     Title="发起新任务">
 
-    <a:Lv x:Name="_lv" ItemClick="OnItemClick">
+    <a:Dlg.Menu>
+        <a:Menu>
+            <a:Mi ID="启动" Icon="播放" Click="OnStart" IsEnabled="{Binding HasSelected,ElementName=_lv}" />
+        </a:Menu>
+    </a:Dlg.Menu>
+
+    <a:Lv x:Name="_lv" ItemDoubleClick="OnItemDoubleClick">
         <DataTemplate>
             <a:Dot ID="name" Margin="10,0,10,0" />
         </DataTemplate>
