--- a/Client/Dt.Base/Report/Design/PageSettingWin.xaml
+++ b/Client/Dt.Base/Report/Design/PageSettingWin.xaml
@@ -9,7 +9,7 @@
             <a:Tab Title="页面设置">
                 <a:Tab.Menu>
                     <a:Menu>
-                        <a:Mi ID="撤消" Icon="撤销" Cmd="{Binding CmdUndo,ElementName=_fv}" />
+                        <a:Mi ID="撤消" Icon="撤消" Cmd="{Binding CmdUndo,ElementName=_fv}" />
                     </a:Menu>
                 </a:Tab.Menu>
                 <a:Fv x:Name="_fv">
