--- a/Client/Dt.Base/Report/Design/ParamsWin.xaml
+++ b/Client/Dt.Base/Report/Design/ParamsWin.xaml
@@ -22,7 +22,7 @@
                 <a:Tab.Menu>
                     <a:Menu>
                         <a:Mi ID="增加" Icon="加号" ShowInPhone="Icon" Click="OnAdd" />
-                        <a:Mi ID="撤消" Icon="撤销" Cmd="{Binding CmdUndo,ElementName=_fv}" />
+                        <a:Mi ID="撤消" Icon="撤消" Cmd="{Binding CmdUndo,ElementName=_fv}" />
                         <a:Mi ID="删除" Icon="删除" Click="OnDel" />
                     </a:Menu>
                 </a:Tab.Menu>
