--- a/Client/Dt.App/Workflow/Demo/WfDemoForm.xaml
+++ b/Client/Dt.App/Workflow/Demo/WfDemoForm.xaml
@@ -6,7 +6,7 @@
 
     <a:WinCenter>
         <a:Tabs>
-            <a:Tab x:Name="_tab" Title="主区单视图">
+            <a:Tab x:Name="_tab" Title="表单">
                 <a:Tab.Menu>
                     <a:Menu>
                         <a:Mi ID="发送" Icon="发出" Cmd="{Binding CmdSend}" />
