--- a/Client/Dt.Sample/Win/WinNavi.xaml
+++ b/Client/Dt.Sample/Win/WinNavi.xaml
@@ -32,6 +32,7 @@
                 <StackPanel Margin="10">
                     <Button Content="主区" Click="OnNavi" />
                     <Button Content="左下,右停靠" Click="OnNavi" />
+                    <Button Content="关闭窗口" Click="OnClosWin" />
                 </StackPanel>
             </a:Tab>
         </a:Tabs>
