--- a/Client/Dt.App/Workflow/Demo/WfDemoForm.xaml
+++ b/Client/Dt.App/Workflow/Demo/WfDemoForm.xaml
@@ -7,7 +7,7 @@
     <a:WinCenter>
         <a:Tabs>
             <a:Tab x:Name="_tab" Title="表单">
-                <a:Tab.Menu>
+                <!--<a:Tab.Menu>
                     <a:Menu>
                         <a:Mi ID="发送" Icon="发出" Cmd="{Binding CmdSend}" />
                         <a:Mi ID="回退" Icon="追回" Cmd="{Binding CmdRollback}" />
@@ -17,7 +17,7 @@
                         <a:Mi ID="删除" Icon="垃圾箱" Cmd="{Binding CmdDelete}" />
                         <a:Mi ID="日志" Icon="审核" Cmd="{Binding CmdLog}" />
                     </a:Menu>
-                </a:Tab.Menu>
+                </a:Tab.Menu>-->
                 <a:Fv x:Name="_fv">
                     <a:CText ID="txt" Title="文本框" />
                 </a:Fv>
