--- a/Client/Dt.App/Model/Privilege/BasePrivilege.xaml
+++ b/Client/Dt.App/Model/Privilege/BasePrivilege.xaml
@@ -47,12 +47,20 @@
         <a:Tabs>
             <a:Tab Title="授权角色">
                 <a:Tab.Menu>
-                    <a:Menu>
+                    <a:Menu x:Name="_rMenu">
                         <a:Mi ID="添加" Icon="加号" Click="OnAddRole" IsEnabled="{Binding HasSelected,ElementName=_lvPrv}" />
-                        <a:Mi ID="移除" Icon="垃圾箱" Click="OnRemoveRole" IsEnabled="{Binding HasSelected,ElementName=_lvPrv}" />
+                        <a:Mi ID="移除" Icon="垃圾箱" Click="OnRemoveRole" IsEnabled="{Binding HasSelected,ElementName=_lvRole}" Visibility="Collapsed" />
+                        <a:Mi ID="全选" Icon="正确" Click="OnSelectAll" Visibility="Collapsed" />
+                        <a:Mi ID="选择" Icon="详细" Click="OnMultiMode" />
+                        <a:Mi ID="取消" Icon="详细" Click="OnCancelMulti" Visibility="Collapsed" />
                     </a:Menu>
                 </a:Tab.Menu>
                 <a:Lv x:Name="_lvRole">
+                    <a:Ex.Menu>
+                        <a:Menu>
+                            <a:Mi ID="移除" Icon="垃圾箱" Click="OnRemoveRole2" />
+                        </a:Menu>
+                    </a:Ex.Menu>
                     <DataTemplate>
                         <a:Dot ID="rolename" Margin="10,0,10,0" />
                     </DataTemplate>
