完成用户参数功能

--- a/Client/Dt.App/Home/MyMain.xaml
+++ b/Client/Dt.App/Home/MyMain.xaml
@@ -24,7 +24,7 @@
         <a:CLink Title="我的二维码" />
         <a:CLink Title="修改密码" />
         <a:CLink Title="设置" Click="OnSetting" />
-        <a:CLink Title="关于" />
+        <a:CLink Title="关于" Click="OnAbout" />
         <a:CBar>
             <Button Content="清除缓存" Click="OnClearLocalFile" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
         </a:CBar>
