--- a/Client/Dt.App/Model/Params/MyParamsSetting.xaml
+++ b/Client/Dt.App/Model/Params/MyParamsSetting.xaml
@@ -5,7 +5,8 @@
     xmlns:a="using:Dt.Base">
 
     <a:Fv x:Name="_fv">
-        <a:CBar Title="基本格" />
-        <a:CText ID="txt" Title="文本框" />
+        <a:CBool ID="接收新任务" IsSwitch="True" TrueVal="true" FalseVal="false" />
+        <a:CBool ID="接收新发布通知" IsSwitch="True" TrueVal="true" FalseVal="false" />
+        <a:CBool ID="接收新消息" IsSwitch="True" TrueVal="true" FalseVal="false" />
     </a:Fv>
 </UserControl>
