--- a/Client/Dt.App/Workflow/RunTime/StartWorkflow.xaml
+++ b/Client/Dt.App/Workflow/RunTime/StartWorkflow.xaml
@@ -1,19 +1,25 @@
-﻿<a:Dlg
+﻿<a:Win
     x:Class="Dt.App.Workflow.StartWorkflow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
-    Title="发起新任务">
+    AutoSaveLayout="False">
 
-    <a:Dlg.Menu>
-        <a:Menu>
-            <a:Mi ID="启动" Icon="播放" Click="OnStart" IsEnabled="{Binding HasSelected,ElementName=_lv}" />
-        </a:Menu>
-    </a:Dlg.Menu>
+    <a:WinItem DockState="DockedLeft">
+        <a:Tabs>
+            <a:Tab Title="发起新任务">
+                <a:Tab.Menu>
+                    <a:Menu>
+                        <a:Mi ID="启动" Icon="播放" Click="OnStart" IsEnabled="{Binding HasSelected,ElementName=_lv}" />
+                    </a:Menu>
+                </a:Tab.Menu>
 
-    <a:Lv x:Name="_lv" ItemDoubleClick="OnItemDoubleClick">
-        <DataTemplate>
-            <a:Dot ID="name" Margin="10,0,10,0" />
-        </DataTemplate>
-    </a:Lv>
-</a:Dlg>
+                <a:Lv x:Name="_lv" ItemDoubleClick="OnItemDoubleClick">
+                    <DataTemplate>
+                        <a:Dot ID="name" Margin="10,0,10,0" />
+                    </DataTemplate>
+                </a:Lv>
+            </a:Tab>
+        </a:Tabs>
+    </a:WinItem>
+</a:Win>
