--- a/Client/Dt.App/Workflow/RunTime/WfSendDlg.xaml
+++ b/Client/Dt.App/Workflow/RunTime/WfSendDlg.xaml
@@ -3,17 +3,23 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
-    Title="发起新任务">
+    Title="发送">
 
+    <a:Dlg.Resources>
+        <DataTemplate x:Key="ViewTemp">
+            <a:Dot ID="name" Padding="10" />
+        </DataTemplate>
+    </a:Dlg.Resources>
+    
     <a:Dlg.Menu>
         <a:Menu>
-            <a:Mi ID="启动" Icon="播放" Click="OnStart" IsEnabled="{Binding HasSelected,ElementName=_lv}" />
+            <a:Mi ID="发送" Icon="发出" Click="OnSend" />
         </a:Menu>
     </a:Dlg.Menu>
 
-    <a:Lv x:Name="_lv" ItemDoubleClick="OnItemDoubleClick">
-        <DataTemplate>
-            <a:Dot ID="name" Margin="10,0,10,0" />
-        </DataTemplate>
-    </a:Lv>
+    <ScrollViewer>
+        <StackPanel x:Name="_pnl" />
+    </ScrollViewer>
 </a:Dlg>
+
+    
