流程实例管理

--- a/Client/Dt.App/Workflow/RunTime/CurrentTasks.xaml
+++ b/Client/Dt.App/Workflow/RunTime/CurrentTasks.xaml
@@ -2,8 +2,7 @@
     x:Class="Dt.App.Workflow.CurrentTasks"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:a="using:Dt.Base"
-    AutoSaveLayout="False">
+    xmlns:a="using:Dt.Base">
 
     <a:WinItem DockState="DockedLeft">
         <a:Tabs>
