--- a/Client/Dt.App/Workflow/Mgr/WfTemplateMgr.xaml
+++ b/Client/Dt.App/Workflow/Mgr/WfTemplateMgr.xaml
@@ -1,5 +1,5 @@
 ﻿<a:Win
-    x:Class="Dt.App.Workflow.WorkflowMgr"
+    x:Class="Dt.App.Workflow.WfTemplateMgr"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
@@ -29,10 +29,11 @@
                         <a:Menu>
                             <a:Mi ID="流程编辑" Icon="双绞线" Click="OnEditTemplateContext" />
                             <a:Mi ID="删除" Icon="删除" Click="OnDelContext" />
+                            <a:Mi ID="查看实例" Icon="详细" Click="OnShowInst" />
                         </a:Menu>
                     </a:Ex.Menu>
                     <DataTemplate>
-                        <StackPanel Padding="10" BorderBrush="{StaticResource 浅灰边框}" BorderThickness="0,0,1,0">
+                        <StackPanel Padding="10">
                             <a:Dot ID="name" />
                             <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
                                 <a:Dot ID="IsLocked" UIType="CheckBox" Foreground="{StaticResource 深灰边框}" />
