--- a/Client/Oa/收文/收文表单.xaml
+++ b/Client/Oa/收文/收文表单.xaml
@@ -1,34 +1,17 @@
-﻿<a:Win
+﻿<UserControl
     x:Class="Dt.Oa.收文表单"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base">
 
-    <a:Main>
-        <a:Tabs>
-            <a:Tab x:Name="_tab" Title="表单">
-                <!--<a:Tab.Menu>
-                    <a:Menu>
-                        <a:Mi ID="发送" Icon="发出" Cmd="{Binding CmdSend}" />
-                        <a:Mi ID="回退" Icon="追回" Cmd="{Binding CmdRollback}" />
-                        <a:Mi ID="签收" Icon="锁卡" Cmd="{Binding CmdAccept}" />
-                        <a:Mi ID="保存" Icon="保存" Cmd="{Binding CmdSave}" />
-                        <a:Mi ID="撤消" Icon="撤消" Cmd="{Binding CmdUndo,ElementName=_fv}" />
-                        <a:Mi ID="删除" Icon="垃圾箱" Cmd="{Binding CmdDelete}" />
-                        <a:Mi ID="日志" Icon="审核" Cmd="{Binding CmdLog}" />
-                    </a:Menu>
-                </a:Tab.Menu>-->
-                <a:Fv x:Name="_fv">
-                    <a:CText ID="来文单位" />
-                    <a:CDate ID="来文时间" />
-                    <a:CList ID="密级" Enum="Dt.Oa.密级,Dt.Oa" />
-                    <a:CText ID="文件标题" />
-                    <a:CFile ID="文件附件" MaxFileCount="1" />
-                    <a:CText ID="市场部经理意见" />
-                    <a:CText ID="综合部经理意见" />
-                    <a:CTip ID="收文完成时间" />
-                </a:Fv>
-            </a:Tab>
-        </a:Tabs>
-    </a:Main>
-</a:Win>
+    <a:Fv x:Name="_fv">
+        <a:CText ID="来文单位" />
+        <a:CDate ID="来文时间" />
+        <a:CList ID="密级" Enum="Dt.Oa.密级,Dt.Oa" />
+        <a:CText ID="文件标题" />
+        <a:CFile ID="文件附件" MaxFileCount="1" />
+        <a:CText ID="市场部经理意见" />
+        <a:CText ID="综合部经理意见" />
+        <a:CTip ID="收文完成时间" />
+    </a:Fv>
+</UserControl>
