--- a/Client/Dt.App/Workflow/RunTime/HistoryTasks.xaml
+++ b/Client/Dt.App/Workflow/RunTime/HistoryTasks.xaml
@@ -37,7 +37,7 @@
     <a:Main>
         <a:Tabs>
             <a:Tab Title="历史任务">
-                <a:Lv x:Name="_lv" >
+                <a:Lv x:Name="_lv" ItemDoubleClick="OnItemDoubleClick">
                     <a:Ex.Menu>
                         <a:Menu>
                             <a:Mi ID="查看表单" Icon="详细" Click="OnShowInst" />
@@ -46,8 +46,12 @@
                     </a:Ex.Menu>
                     <DataTemplate>
                         <StackPanel Padding="10">
-                            <a:Dot ID="formname" />
-                            
+                            <a:Dot ID="title" />
+                            <StackPanel Orientation="Horizontal" Margin="0,6,0,6">
+                                <a:Dot ID="sender" FontSize="12" Foreground="{StaticResource 深灰边框}" />
+                                <TextBlock Text="{Binding [stime],Converter={StaticResource CvDateTime}}" Margin="10,0,0,0" FontSize="12" Foreground="{StaticResource 深灰边框}" />
+                            </StackPanel>
+                            <a:Dot ID="prcname" FontSize="12" Foreground="{StaticResource 深灰边框}" />
                         </StackPanel>
                     </DataTemplate>
                 </a:Lv>
