--- a/Client/Dt.App/Workflow/RunTime/WfSendDlg.xaml
+++ b/Client/Dt.App/Workflow/RunTime/WfSendDlg.xaml
@@ -3,7 +3,8 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
-    Title="发送">
+    Title="发送"
+    IsPinned="True">
 
     <a:Dlg.Resources>
         <DataTemplate x:Key="ViewTemp">
@@ -12,8 +13,9 @@
     </a:Dlg.Resources>
     
     <a:Dlg.Menu>
-        <a:Menu>
+        <a:Menu x:Name="_m">
             <a:Mi ID="发送" Icon="发出" Click="OnSend" />
+            <a:Mi ID="完成" Icon="录像" Click="OnFinish" Visibility="Collapsed" />
         </a:Menu>
     </a:Dlg.Menu>
 
