--- a/Client/Dt.App/Model/Menu/SysMenu.xaml
+++ b/Client/Dt.App/Model/Menu/SysMenu.xaml
@@ -53,7 +53,7 @@
                         </DataTemplate>
                     </a:CList>
                     <a:CText ID="params" Title="视图参数" AcceptsReturn="True" RowSpan="3" />
-                    <a:CText ID="srvname" Title="提示服务" />
+                    <a:CText ID="svcname" Title="提示服务" />
                     <a:CText ID="note" Title="功能说明" AcceptsReturn="True" RowSpan="3" />
                     <a:CBool ID="islocked" Title="锁定不可用" />
                     <a:CDate ID="ctime" Title="创建时间" IsReadOnly="True" />
